src/yini_test/cases/golden/lenient/valid/numbers/negative-float.yini
@yini

^ Numbers
val = -3.14

