src/yini_test/cases/golden/lenient/invalid/numbers/malformed-float-double-dot.yini
@yini

^ Numbers
val = 3.14.15

